cmake_minimum_required(VERSION 3.10.0)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

# service object
#add_library(core OBJECT object.cpp)
#target_include_directories(core PRIVATE
#    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
#    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
#    $<BUILD_INTERFACE:${CMAKE_CURRENT_DIR}>
#)
